--- a/application/milestone0/package.json
+++ b/application/milestone0/package.json
@@ -13,10 +13,11 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "web": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start" : "node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
