--- a/application/milestone2/package.json
+++ b/application/milestone2/package.json
@@ -8,6 +8,7 @@
   },
   "author": "",
   "license": "ISC",
+  "homepage": "./",
   "dependencies": {
     "body-parser": "^1.19.0",
     "multer": "^1.4.2",
