--- a/application/milestone3/frontend/package.json
+++ b/application/milestone3/frontend/package.json
@@ -13,6 +13,7 @@
     "immutability-helper": "^3.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropdown": "^1.9.0",
     "react-modal": "^3.11.2",
     "react-scripts": "4.0.0",
     "reactstrap": "^8.7.0",
