--- a/application/milestone3/package.json
+++ b/application/milestone3/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "reactjs-popup": "^2.0.4"
   }
 }
