--- a/application/milestone3/package.json
+++ b/application/milestone3/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "reactjs-popup": "^2.0.4"
   }
 }
