--- a/application/milestone3/frontend/package.json
+++ b/application/milestone3/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.0",
     "immutability-helper": "^3.1.1",
     "react": "^17.0.1",
+    "react-chat-window": "^1.2.1",
     "react-dom": "^17.0.1",
     "react-dropdown": "^1.9.0",
     "react-horizontal-scroll-container": "^1.0.1",
