--- a/application/milestone3/package.json
+++ b/application/milestone3/package.json
@@ -17,6 +17,7 @@
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "reactjs-popup": "^2.0.4"
+    "reactjs-popup": "^2.0.4",
+    "socket.io": "^3.0.4"
   }
 }
