--- a/application/milestone3/package.json
+++ b/application/milestone3/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.808.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
