--- a/application/milestone3/frontend/package.json
+++ b/application/milestone3/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-chat-window": "^1.2.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-dropdown": "^1.9.0",
     "react-horizontal-scroll-container": "^1.0.1",
